2003-07-15  Dave Peticolas  <dave@krondo.com>

	* twisted/persisted/styles.py: better debugging output
	for Ephemeral

2003-07-14  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/cred/checkers.py, twisted/cred/credentials.py:
	CramMD5Credentials and OnDiskUsernamePasswordDatabase added;
	IUsernameHashedPassword also created for use by protocols that
	do not receive plaintext passwords over the network.

	* twisted/mail/, twisted/protocols/smtp.py: Addition of alias
	support and authenticated ESMTP connections.  Several interfaces
	changed, but deprecation warnings and backwards compatibility code
	has been put in place to ease the change.

2003-07-12  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/web/util.py: Add a new ChildRedirector that, when placed
	at /foo to redirect to /bar, will also redirect /foo/abc to
	/bar/abc.

	* twisted/web/scripts.py: Fixed ResourceScriptWrapper so that you
	can now .putChild on the resource you create in an .rpy file that
	is wrapped with this class.

2003-07-06  Paul Swartz  <z3p@twistedmatrix.com>
	* twisted/conch/[checkers,credentials,pamauth].py,
	  twisted/conch/ssh/userauth.py, twisted/tap/conch.py: made PAM
	  work again as an authentication.

2003-07-05  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_enterprise.py: more tests. Add mysql test.

2003-07-05  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/web/soap.py: Now requires SOAPpy v0.10.1, allow subclasses
	to determine method publishing strategy.

2004-07-05  Jp Calderone  <exarkun@twistedmatrix.com>

	* bin/mailmail, doc/man/mailmail.1, twisted/scripts/mailmail.py:
	sendmail replacement

2003-07-04  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_enterprise.py: add sqlite. more tests.
	Add Postgres test.

	* twisted/enterprise/util.py: fix bug in getKeyColumn

	* twisted/enterprise/sqlreflector.py: clean up imports

	* twisted/enterprise/row.py: clean up imports

	* twisted/enterprise/reflector.py: clean up imports
